fix(defi-landing): ruble icon wrap fixes

--- a/src/features/landing-checkout/styles.module.scss
+++ b/src/features/landing-checkout/styles.module.scss
@@ -57,6 +57,10 @@
     padding: 40px 36px;
   }
 
+  &__icon {
+    display: inline-block;
+  }
+
   &__subtitle {
     font-size: 16px;
     line-height: 26px;
